# ncaa-prediction-model

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  MILESTONES.md  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  run.py  run_data_collection.py
.github/workflows/: docs.yml
architecture/: index.html
architecture/adr-001-modular-data-collection/: index.html
architecture/adr-002-data-storage/: index.html
architecture/adr-003-data-processing-with-polars/: index.html
architecture/adr-template/: index.html
architecture/cli-design/: index.html
architecture/configuration-management/: index.html
architecture/data-directory-structure/: index.html
architecture/data-entities/: index.html
architecture/data-pipeline/: index.html
architecture/development-phases/: index.html
architecture/logging-strategy/: index.html
components/data_collection/: index.html
components/features/: index.html
components/models/: index.html
components/pipeline_framework/: index.html
config/: data_sources.yaml
configs/: config.py
data/: index.html  ncaa.duckdb
data/collection/: index.html
data/collection/espn-api-integration/: index.html
development/: index.html
development/ai-coding-agent-guide/: index.html
development/ai-task-authoring-guide/: index.html
development/api-docs/: index.html
development/code-standards/: index.html
development/documentation/: index.html
development/documentation-strategy/: index.html
development/examples/: index.html
development/examples/ai_issue_example/: index.html
development/examples/ai_milestone_example/: index.html
development/examples/ai_pr_example/: index.html
development/examples/ai_task_example/: index.html
development/examples/issue_example/: index.html
development/examples/milestone_example/: index.html
development/examples/pr_example/: index.html
development/examples/task_example/: index.html
development/implementation-plan/: index.html
development/milestones/: index.html
development/milestones/milestone1-data-collection/: index.html
development/modularity-guidelines/: index.html
development/pipeline-architecture/: index.html
development/project-structure/: index.html
development/setup/: index.html
development/tech-stack/: index.html
development/test-strategy/: index.html
development/testing/: index.html
development/workflow/: index.html
docs/: architecture.md  espn-api-reference.md  gen_ref_pages.py  index.md
docs/architecture/: adr-001-modular-data-collection.md  adr-002-data-storage.md  adr-003-data-processing-with-polars.md  adr-template.md  cli-design.md  configuration-management.md  data-directory-structure.md  data-entities.md  data-pipeline.md  development-phases.md  index.md  logging-strategy.md
docs/components/: data_collection.md  features.md  models.md  pipeline_framework.md
docs/data/: index.md
docs/data/collection/: espn-api-integration.md  index.md
docs/development/: ai-coding-agent-guide.md  ai-task-authoring-guide.md  api-docs.md  code-standards.md  contributing.md  documentation-strategy.md  documentation.md  implementation-plan.md  index.md  modularity-guidelines.md  pipeline-architecture.md  project-structure.md  setup.md  tech-stack.md  test-strategy.md  testing.md  workflow.md
docs/development-guides/: how-to-write-effective-tasks.md  index.md  task-example.md
docs/development/examples/: ai_issue_example.md  index.md  (+2 more)
docs/espn-api-documentation/: basketball-scoreboard-api.md  basketball-teams-api.md
docs/examples/: ai_milestone_example.md  ai_task_example.md  index.md
docs/guides/: adding_features.md  collecting_basketball_data.md  extending_pipelines.md
docs/milestones/: README.md  milestone1-data-collection.md
docs/overview/: architecture.md  index.md  tech-stack.md
docs/scripts/: historical_data_collection.md
docs/templates/: README.md  ai_task_template.md  index.md  issue_template.md  milestone_template.md  pr_template.md  task_template.md
espn-api-reference/: index.html
examples/: README.md  __init__.py  base_pipeline_example.py  historical_data_collection_demo.py  index.html
examples/ai_milestone_example/: index.html
examples/ai_task_example/: index.html
examples/pipelines/: __init__.py  dependency_injection_example.py  monitoring_example.py  pipeline_composition_example.py  simple_pipeline_example.py
guides/adding_features/: index.html
guides/collecting_basketball_data/: index.html
guides/extending_pipelines/: index.html
milestones/: index.html
milestones/milestone1-data-collection/: index.html
overview/: index.html
overview/architecture/: index.html
overview/tech-stack/: index.html
reference/SUMMARY/: index.html
scripts/historical_data_collection/: index.html
search/: search_index.json
src/: __init__.py
src/clients/: __init__.py  espn.py
src/data/: collect_ncaa_data.py  validate_ncaa_data.py
src/features/: __init__.py
src/ingest/: __init__.py  base.py  ingest_all.py  scoreboard.py  teams.py
src/models/: __init__.py
src/pipelines/: base_pipeline.py  collection_pipeline.py  dependency_injection.py  monitoring.py  pipeline_composition.py
src/process/: __init__.py
src/scripts/: historical_data_collection.py
src/utils/: __init__.py  config.py  database.py  date_utils.py  espn_api_client.py  logging.py  parquet_storage.py
tests/: __init__.py  conftest.py  test_gen_ref_pages.py
tests/data/: test.db
tests/ingest/: __init__.py  test_base_ingestion.py  test_pagination.py  test_scoreboard.py  test_scoreboard_force_options.py  test_teams.py  test_unified_ingestion.py
tests/integration/: __init__.py  test_parquet_storage.py  test_scoreboard_ingestion.py
tests/pipelines/: test_base_pipeline.py  test_collection_pipeline.py  test_dependency_injection.py  test_monitoring_hooks.py  test_pipeline_composition.py
tests/scripts/: test_historical_data_collection.py
tests/utils/: __init__.py  test_config.py  test_database.py  test_date_utils.py  test_espn_api_client.py  test_logging.py
(+41 files in other folders)
