[project]
name = "ncaa-prediction-model"
version = "0.1.0"
description = "NCAA Basketball Prediction Model"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
dependencies = [
    "pydantic>=2.6.1",
    "polars[pyarrow]>=1.25.2",
    "duckdb>=1.2.1",
    "scikit-learn>=1.3.2",
    "click>=8.1.3",
    "structlog>=23.1.0",
    "rich>=13.3.5",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "types-pyyaml>=6.0.12.20241230",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "mkdocs-material>=9.6.9",
]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
]

# Keep some docstring rules but be less strict
extend-select = ["D417", "D206", "D300"]

ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ARG", "PLR"]  # Be more relaxed with test files
"**/models/*.py" = ["ARG001"]  # Allow unused arguments in models

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Consider removing MyPy entirely if it's causing significant delays

[tool.ruff.lint.pydocstyle]
convention = "google"
